# ECC

./: pyproject.toml
.github/workflows/: ci.yml
src/llm/: __init__.py
src/llm/prompt/: __init__.py  builder.py
src/llm/providers/: __init__.py  ollama.py  openai.py  resolver.py
src/llm/tools/: executor.py
tests/: test_astraflow_provider.py  test_atlas_provider.py  test_builder.py  test_executor.py  test_invariant_runner.py  test_resolver.py  test_types.py
tests/hooks/: test_insaits_security_monitor.py
